# gplove

./: .env.example  .gitignore  CMakeLists.txt  GP Love.sh  Makefile  README.md
.gplove/: gp.love
.gplove/gplove/: main.lua
cmake/: aarch64-toolchain-mac.cmake
packaging/muos/: gplove.sh
src/: input.cpp  input.h  main.cpp  renderer.cpp  renderer.h  trail.cpp  trail.h
